--- a/PMS-PropertyHapa.Staff/Views/Lease/AddLease.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Lease/AddLease.cshtml
@@ -300,9 +300,9 @@
                                             <select id="propertyDropdown" name="SelectedProperty" class="form-select" data-selected-property="@Model?.SelectedProperty">
 
                                                 <!-- Random property options -->
-                                                <option value="property1">Property 1</option>
-                                                <option value="property2">Property 2</option>
-                                                <option value="property3">Property 3</option>
+                                                <option value="property1">Naseer Office Builing</option>
+                                                <option value="property2">Shiraz Building</option>
+                                                <option value="property3">Ali Builing</option>
                                             </select>
                                         </div>
 
@@ -310,9 +310,9 @@
                                             <label for="unitDropdown" class="form-label">Choose Units</label>
                                             <select id="unitDropdown" name="SelectedUnit" class="form-select" data-selected-property="@Model?.SelectedUnit">
                                                 <!-- Random unit options -->
-                                                <option value="unit1">Unit 1</option>
-                                                <option value="unit2">Unit 2</option>
-                                                <option value="unit3">Unit 3</option>
+                                                <option value="unit1">A1</option>
+                                                <option value="unit2">A2</option>
+                                                <option value="unit3">A3</option>
                                             </select>
                                         </div>
 
