--- a/PMS-PropertyHapa.Tenant/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Tenant/Views/Shared/_Layout.cshtml
@@ -77,6 +77,12 @@
             padding-bottom: 0;
         }
 
+        #organizationLogoImg {
+            height: 56px;
+            width: 56px;
+            object-fit: cover;
+        }
+
         .static-widget {
             margin-bottom: 0px !important;
         }
@@ -96,7 +102,7 @@
                         <nav class="navbar navbar-light p-0" id="navbar-example2">
                             <a class="navbar-brand" href="@Url.Action("Index","Home")">
                                 <div id="organizationLogoContainer">
-                                    <img id="organizationLogoImg" class="img-fluid" src="" height="108px" width="56px" alt="Organization Logo">
+                                    <img id="organizationLogoImg" class="" src="" alt="Organization Logo">
                                 </div>
                             </a>
                             <ul class="landing-menu nav nav-pills">
